syntax = "proto3";

package yandex.cloud.events.certificatemanager;

import "google/rpc/status.proto";
import "yandex/cloud/events/common.proto";
import "yandex/cloud/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/events/certificatemanager;certificatemanager";
option java_package = "yandex.cloud.api.events.certificatemanager";
option java_outer_classname = "DomainEvents";

message CreateDomain {
    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];
    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];
    google.rpc.Status error = 6;
    EventDetails details = 7 [(required) = true];

    message EventDetails {
        string domain_id = 1 [(required) = true];
    }

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
        CANCELLED = 4;
    }
}

message UpdateDomain {
    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];
    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];
    google.rpc.Status error = 6;
    EventDetails details = 7 [(required) = true];

    message EventDetails {
        string domain_id = 1 [(required) = true];
    }

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
        CANCELLED = 4;
    }
}

message SetDomainPrimaryCertificate {
    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];
    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];
    google.rpc.Status error = 6;
    EventDetails details = 7 [(required) = true];

    message EventDetails {
        string domain_id = 1 [(required) = true];
        string certificate_id = 2;
    }

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
        CANCELLED = 4;
    }
}

message DeleteDomain {
    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];
    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];
    google.rpc.Status error = 6;
    EventDetails details = 7 [(required) = true];

    message EventDetails {
        string domain_id = 1 [(required) = true];
    }

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
        CANCELLED = 4;
    }
}

message UpdateDomainAccessBindings {
    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];
    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];
    google.rpc.Status error = 6;
    EventDetails details = 7 [(required) = true];

    message EventDetails {
        string domain_id = 1 [(required) = true];
    }

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
    }
}
